--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,8 @@ section {
 }
 
 .roomy-80 {
-    padding-top: 100px;
-    padding-bottom: 80px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 .roomy-70 {
@@ -1590,6 +1590,15 @@ work Section style
     color: #ff0000;
 }
 
+/* Mobile Services */
+
+.mobile-container {
+    height: 530px;
+    border-style: solid;
+    border-width: 2px;
+    vertical-align: middle;
+}
+
 @media screen and (max-width: 776px) {
 
     a.navbar-brand {
@@ -1608,5 +1617,9 @@ work Section style
 
     .mobile-service {
         display: flex;
+    }
+
+    .business {
+        border-style: none;
     }
 }
