--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,7 +379,7 @@ ul {
 /*all overlay*/
 
 .overlay {
-    background-color: rgba(41, 39, 34, 0.50);
+    background-color: rgba(245, 245, 245);
     width: 100%;
     height: 100%;
     position: absolute;
@@ -474,7 +474,7 @@ Button
 
 
 /*
-socail icon
+social icon
 --------------------------------*/
 /*
 Extra height css
